CSS Seçiciler, Etiket Seçiciler, ID Seçiciler

--- a/web_tabanli_uygulama_gelistirme/html/ders10/css_giris.html
+++ b/web_tabanli_uygulama_gelistirme/html/ders10/css_giris.html
@@ -5,9 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Giriş</title>
-    
+
     <!-- CSS Kodu style etiketleri arasında ve head etiketleri arasına yazılır -->
- 
+    <style>
+        body {
+            background-color: bisque;
+        }
+
+        h3 {
+            color: red;
+            font-size: 26px;
+            text-decoration: underline;
+        }
+
+        p {
+            color: green;
+        }
+
+        li {
+            color: purple;
+            font-style: italic;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -23,8 +43,14 @@
         <li>Elma 1 kg</li>
         <li>Armut 1 kg</li>
         <li>Muz 1 kg</li>
-        <li>Mandalina 1 kg</li>
+        <li style="color: black; font-style: normal;">Mandalina 1 kg</li>
     </ul>
+
+    <b style="color: pink;font-size: 26px;" >Bu CSS satır içi yöntem ile eklenmiştir.</b>
+    <hr>
+
+    <b style="color: brown;">Ben de başka bir b etiketiyim</b>
+
 </body>
 
 </html>
