--- a/web_tabanli_uygulama_gelistirme/html/ders10/id_seciciler.html
+++ b/web_tabanli_uygulama_gelistirme/html/ders10/id_seciciler.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kimlik(ID) Seçiciler</title>
-    
+    <style>
+        #imgResim{
+            /* Kenarları 36px yuvarladık */
+            border-radius: 36px;
+        }
+        #kutu1{
+            background-color: red;
+            width: 600px;
+            height: 100px;
+        }
+        #kutu2{
+            background-color: aquamarine;
+            width: 500px;
+            height: 100px;
+        }
+        #kutu3{
+            background-color: blueviolet;
+            width: 400px;
+            height: 100px;
+        }
+    </style>
 </head>
 <body>
     
