--- a/web_tabanli_uygulama_gelistirme/css/ders11/css_sinif_seciciler.html
+++ b/web_tabanli_uygulama_gelistirme/css/ders11/css_sinif_seciciler.html
@@ -5,14 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Sınıf Seçiciler</title>
- 
+    <style>
+        .genelBaslik{
+            color:blue;
+            font-size: 30px;
+        }
+
+        .altBaslik{
+            color: red;
+            font-size: 16px;
+        }
+        
+        p{
+            color: brown;
+            font-size: 14px;
+            border: 2px black solid;
+            padding: 10px;
+            border-radius: 10px;
+        }
+
+
+    </style>
 </head>
 
 <body>
-    <h3 >
+
+    
+    <h3 class="genelBaslik">
         CSS Seçiciler
     </h3>
-    <h3 >
+    <h3 class="altBaslik">
         CSS Sınıf Seçiciler ( CSS Class Selectors )
     </h3>
     <p>
@@ -21,13 +43,13 @@
         Autem, neque suscipit quisquam alias at laboriosam fuga, eveniet ipsum, illum voluptas nulla? Eveniet id quaerat
         earum.
     </p>
-    <h3 >
+    <h3 class="altBaslik">
         CSS Kimlik Seçiciler (CSS ID Selectors)
     </h3>
     <p>
         Burası da id seçiciler ile ilgili Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, nam autem repellendus id, tempora nesciunt beatae consequuntur architecto fugit alias nobis exercitationem iure. Ad necessitatibus accusamus iste asperiores repudiandae ab.
     </p>
-    <h3 >
+    <h3 class="altBaslik">
         CSS Etiket Seçiciler (CSS Tag Selectors)
     </h3>
     <p>
