Hafta 9 - Sayfaya CSS ekleme yöntemleri

--- a/web_tabanli_uygulama_gelistirme/2025-2026/mesem/ders1/basliklar.html
+++ b/web_tabanli_uygulama_gelistirme/2025-2026/mesem/ders1/basliklar.html
@@ -37,7 +37,7 @@ Mustafa SOLAK
     x<sup>2</sup> + y<sup>2</sup> = z<sup>2</sup> <br>
 
     <br>
-    Altı çizili yazı yazmak için del etiketi kullanılır. <br>
+    Altı çizili yazı yazmak için u etiketi kullanılır. <br>
     <u>Bu kısmın</u> altı çizilidir. <br>
     <del>Üstü çizili</del> yazı yazmak için del etiketi kullanılır. <br>
     Eğik yazı için i etiketi kullanılır. <br>
