CSS Seçiciler konusu başladı. 1-Etiket seçiciler, 2-Kimlik(ID) Seçiciler

--- a/web_tabanli_uygulama_gelistirme/2025-2026/css/hafta9/1_satir_ici_css_ekleme.html
+++ b/web_tabanli_uygulama_gelistirme/2025-2026/css/hafta9/1_satir_ici_css_ekleme.html
@@ -10,7 +10,7 @@
     <h1>CSS Ekleme Yöntemleri</h1>
 
     <h3>1. Satır içi olarak CSS ekleme</h3>
-    <p style="color:red;" >
+    <p style="color:red;font-size:16px;" >
        Satır içi olarak CSS ekleme yöntemi ile bu paragrafın metin rengi kırmızı olarak ayarlanmıştır. Satır içi CSS, HTML etiketinin "style" özniteliği kullanılarak uygulanır.
     </p>
 
