--- a/web_tabanli_uygulama_gelistirme/2025-2026/css/hafta11/2_cocuk_ve_torun_seciciler.html
+++ b/web_tabanli_uygulama_gelistirme/2025-2026/css/hafta11/2_cocuk_ve_torun_seciciler.html
@@ -15,9 +15,16 @@
         div>img{
             width: 48px;
         }
-
+/*
         div>b{
             color:white
+        }*/
+        div b{
+            color:red;
+        }
+
+        div>p>span{
+            color:blue;
         }
     </style>
 </head>
