Çocuk, sınıf ve pseudo sınıf seçiciler

--- a/web_tabanli_uygulama_gelistirme/2025-2026/css/hafta11/2_cocuk_ve_torun_seciciler.html
+++ b/web_tabanli_uygulama_gelistirme/2025-2026/css/hafta11/2_cocuk_ve_torun_seciciler.html
@@ -26,6 +26,9 @@
         div>p>span{
             color:blue;
         }
+        .yesil{
+            color: green;
+        }
     </style>
 </head>
 
