resim kenarlık eklendi

--- a/web_tabanli_uygulama_gelistirme/2025-2026/css/hafta11/7_display_ozellikleri.html
+++ b/web_tabanli_uygulama_gelistirme/2025-2026/css/hafta11/7_display_ozellikleri.html
@@ -26,6 +26,9 @@
             border: 1px black solid;
             width: 150px;
             text-align: center;
+            margin-bottom: 10px;
+            margin-right: 16px;
+            border-radius: 16px;
 
         }
         div img{
