--- a/web_tabanli_uygulama_gelistirme/2025-2026/javascript/hafta13/1_alert.html
+++ b/web_tabanli_uygulama_gelistirme/2025-2026/javascript/hafta13/1_alert.html
@@ -10,6 +10,10 @@
     <script  src="script.js" ></script>
 </head>
 <body>
+
+    <p>
+        Merhaba gençler :)
+    </p> 
     
 </body>
 </html>
