--- a/web_tabanli_uygulama_gelistirme/2025-2026/javascript/hafta16/degiskenler.html
+++ b/web_tabanli_uygulama_gelistirme/2025-2026/javascript/hafta16/degiskenler.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Değişkenler</title>
     <script src="degiskenler.js"></script>
+    <script src="islemler.js"></script>
 </head>
 <body>
     
